--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,12 @@
-h1{
-    background-color: red;
-    color: green;
-    display: inline;
-
+td {
+    color: red;
 }
-.fun {
-    position: sticky;
-    top: 120px;
-    left: 1020px;
-    width: 100%;
+td {
+    position: relative;
+    border: 1px solid black;
+    width: 10px;
+    right: 10px;
+} 
+.class2 {
+    border-radius: 20px;
 }
-
